# aruco_detect

./: CMakeLists.txt  package.xml
launch/: realdetection.launch
src/: aruco_detector.cpp
